# traceto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  wrangler.jsonc
.github/ISSUE_TEMPLATE/: bug_report.md  pii_gap.md
.github/workflows/: sdk-ci.yml
cli/: main.py  pyproject.toml
docs/: api-reference.md  sdk-configuration.md  troubleshooting.md
httrace/: __init__.py  capture.py  client.py  middleware.py
landing/: _headers  admin.html  agb.html  contact.html  dashboard.html  datenschutz.html  forgot-password.html  impressum.html  index.html  llms.txt  login.html  pricing.html  privacy.html  robots.txt  set-password.html  terms.html
landing/docs/: index.html
sdk-go/: go.mod  httrace.go
sdk-node/: package.json
sdk-node/src/: index.js
sdk-ruby/: LICENSE  README.md  httrace.gemspec
sdk-ruby/lib/: httrace.rb
traceto/: __init__.py  client.py  middleware.py  sanitizer.py
vscode-extension/: LICENSE  httrace-vscode-0.2.0.vsix  package-lock.json
vscode-extension/src/: coverageProvider.ts
vscode-extension/src/decorations/: coverage.ts
