[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceto"
version = "0.1.0"
description = "Capture production traffic. Generate integration tests automatically."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "fastapi", "httpx", "starlette"]

[project.urls]
Homepage = "https://traceto.io"
Repository = "https://github.com/traceto/traceto-python"
