[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httrace-cli"
version = "0.1.0"
description = "CLI for Httrace — generate integration tests from production traffic."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
httrace = "main:main"

[project.urls]
Homepage = "https://httrace.com"
